# cthulu

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hook.sh  .tmp_db_fallback_test.py  .tmp_db_test.py  .tmp_repo_write_test.py  ADOPTION_SLTP_FIX.md  ANALYSIS_REPORT.md  ANDROID_ONLY_BRANCH.md  ANDROID_SUMMARY.md  ARCHITECTURAL_OVERHAUL_PROGRESS.md  ARCHITECTURE_REVIEW.md  AUDIT_EXECUTION_LOOP.md  AUDIT_MAIN_LOOP.md  AUDIT_NOTICE.md  CLEANUP_SUMMARY.md  COMMIT_ANALYSIS_SINCE_5.1.md  COMPATIBILITY_FIX_SUMMARY.md  COMPREHENSIVE_SYSTEM_REVIEW.md  CONTEXT.md  Cthulu.py  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_CLEANUP_SUMMARY.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INDEX.md  LICENSE  MAIN_LOOP_STRUCTURE.md  OVERVIEW.md  Obsidian Sync Note.md  PERFORMANCE_FIX_SUMMARY.md  PHASES_8_9_COMPLETION.md  PHASE_10_TESTING_PLAN.md  PHASE_1_4_COMPLETION_REPORT.md  PLACEHOLDER_AUDIT_REPORT.md  QUICKSTART.md  (+52 more)
.archive/: README.md  config.json.bak
.github/: FUNDING.yml
ML_RL/: AI_ML_RL_PROPOSAL.md  ARGMAX_RL_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  ML_ARCHITECTURE.md  README.md  SYSTEM_MAP.md  TRAINING_ROADMAP.md  TR_FRAMEWORL.md  __init__.py  check_data.py  feature_engineering.py  instrumentation.py  ml_models.py  mlops.py  orchestrator.py  reinforcement_learning.py  rl_position_sizer.py  tier_optimizer.py  train_all.py  train_models.py
_dev/: AI_ML_RL_PROPOSAL.md  ANDROID_BRANCH_REVIEW.md  AUTOMATION_GUIDE.md  SYSTEM_REPORT.md  ai_dev.md  system_map.html  system_map.md  system_map_comprehensive.html  system_stats.md
advisory/: INFO.txt  NOTICE.md  README.md  manager.py
assets/: icons.txt
audit/: README.md
audit_reports/: COMPLIANCE_CHECKLIST.md  EXECUTIVE_SUMMARY.md  README.md
backtesting/: README.md  __init__.py  auto_optimizer.py  benchmarks.py  data_manager.py  engine.py  enhancer.py  ensemble.py  hektor_backtest.py  ml_decision.py  optimizer.py  reporter.py  run_auto_tune.ps1  test_harness.py  ui_server.py
cognition/: AI_ML_RL_PROPOSAL.md  README.md  __init__.py  chart_manager.py  engine.py  entry_confluence.py  exit_oracle.py  instrumentation.py  order_blocks.py  pattern_recognition.py  price_predictor.py  regime_classifier.py  sentiment_analyzer.py  session_orb.py  structure_detector.py  tier_optimizer.py  training_logger.py
config/: __init__.py  config.example.yaml  loader.py  mindsets.py  symbols.json  vector_integration.example.yaml  wizard.py
connectivity/: README.md  __init__.py  example_integration.py  test_connectivity.py
connector/: __init__.py  factory.py  mt5_android_interface.py  mt5_bridge_server.py  mt5_connector.py  mt5_connector_android.py
core/: __init__.py  android_service.py  bootstrap.py  connection.py  exceptions.py  exit_loader.py  indicator_loader.py  ml_enhancement.py  risk_manager.py  shutdown.py  strategy_factory.py  trade_manager.py  trading_loop.py
cthulhu/: __init__.py
cthulu/: __init__.py  __main__.py
data/: __init__.py  layer.py
deployment/: BOOTSTRAP.bat  BOOTSTRAP.txt  GCP_DEPLOYMENT.md  GCP_DEPLOYMENT_GUIDE.md  INSTALL_CTHULU.bat  LIVE_STATUS.md  ONELINER.txt  PASTE_AND_RUN.ps1  QUICK_REFERENCE.md  README.md  SETUP.ps1  SETUP_DB_ACLS.md  VSCODE_SETUP.md  bootstrap.cmd  cthulu_full_setup.ps1  instructions  sync  vm_setup.ps1  windows_complete_setup.ps1
docs/: 01_INTRODUCTION.md  02_QUICKSTART.md  03_USAGE.md  04_ARCHITECTURE.md  05_FEATURES_GUIDE.md  06_MINDSETS.md  07_RISK.md  08_DEPLOYMENT.md  08_POSITION_MANAGEMENT.md  09_DEPLOYMENT.md  09_OBSERVABILITY.md  10_BACKTESTING.md  10_OBSERVABILITY.md  11_BACKTESTING.md  11_ML-RL.md  12_ML-RL.md  12_PERFORMANCE_TUNING.md  13_ADVISORY.md  13_LLM_SETUP.md  13_PERFORMANCE_TUNING.md  14_ADVISORY.md  14_SECURITY.md  15_PERFORMANCE_TUNING.md  15_PRIVACY_POLICY.md  15_UTILITIES.md  16_HECKTOR.md  16_SECURITY.md  17_MATHEMATICS.md  18_HECKTOR.md  18_UTILITIES.md  19_PRIVACY_POLICY.md  19_SECURITY.md  20_PRIVACY_POLICY.md  ADVISORY.md  ANDROID_IMPLEMENTATION.md  ANDROID_SETUP.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  ARGMAX_THEORY.md  BACKTESTING.md  (+59 more)
examples/: android_example.py
execution/: __init__.py  engine.py
exit/: __init__.py  adaptive_loss_curve.py  adverse_movement.py  base.py  confluence_exit_manager.py  coordinator.py  dynamic_selector.py  exit_manager.py  micro_account_protection.py  multi_rrr.py  multi_rrr_manager.py  profit_scaling.py  profit_target.py  stop_loss.py  take_profit.py  time_based.py  trailing_stop.py
filters/: __init__.py
herald/: __init__.py  __main__.py
indicators/: __init__.py  adx.py  atr.py  base.py  bollinger.py  macd.py  market_structure.py  rsi.py  signal_aggregator.py  stochastic.py  supertrend.py  volume_indicators.py  vwap.py
integration/: __init__.py  argmax_integration.py
integrations/: DISCORD_INTEGRATION.md  __init__.py  data_layer.py  discord_cli.py  discord_notifier.py  embedder.py  ml_exporter.py  performance_analyzer.py  retriever.py  vector_studio.md  vector_studio.py
market/: providers.py  (+1 more)
(+644 files in other folders)
